<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LibraryThing Browser</string>
    <string name="title_book_list">Book List</string>
    <string name="title_book_detail">Book Detail</string>
    <string name="title_activity_tag_list">Tags</string>
    <string name="title_activity_collection_list">Collections</string>
    <string name="title_activity_author_list">Authors</string>
    <string name="title_activity_login">Login to LibraryThing</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="title_section2">Firstname Lastname</string>
    <string name="title_section1">Lastname, firstname</string>
    <string name="search_label">LibraryThing Browser</string>
    <string name="search_hint">Search books...</string>
    <string name="login_ui_title">Enter your LibraryThing login credentials to download your library</string>
    <string name="login_ui_lt_username_hint">Username</string>
    <string name="login_ui_lt_password_hint">Password</string>
    <string name="login_ui_remember_credentials">Remember my details</string>
    <string name="login_ui_download_button">Download your library</string>
    <string name="details_ui_title_dummy">Title Of Book</string>
    <string name="details_ui_authors_dummy">Author1, Author2</string>
    <string name="details_ui_publication_preface">Published in </string>
    <string name="details_ui_tags_preface">Tags:</string>
    <string name="details_ui_collections_preface">Collections: </string>
    <string name="details_ui_date_entered_preface">Date entered: </string>
    <string name="details_ui_date_acquired_preface">Date acquired: </string>
    <string name="details_ui_date_started_preface">Date started: </string>
    <string name="details_ui_date_ended_preface">Date ended: </string>
    <string name="details_ui_review_preface">Review: </string>
    <string name="details_ui_comments_preface">Comments: </string>
    <string name="details_ui_private_comments_preface">Private comments: </string>
    <string name="authorlist_ui_authors">Authors</string>
    <string name="preferences_ui_version">Version</string>
    <string name="preferences_ui_search_publication_summary_off">Searches do not include books\' publication details</string>
    <string name="preferences_ui_search_publication_summary_on">Searches include books\' publication details</string>
    <string name="preferences_ui_search_publication_title">Search publication details</string>
    <string name="preferences_ui_lt_credentials">LibraryThing credentials</string>
    <string name="preferences_ui_lt_username_title">Username</string>
    <string name="preferences_ui_lt_username_dialog_title">LibraryThing username</string>
    <string name="preferences_ui_lt_username_hint">Enter username here</string>
    <string name="preferences_ui_lt_username_summary">Enter your LibraryThing username</string>
    <string name="preferences_ui_lt_password_title">Password</string>
    <string name="preferences_ui_lt_password_dialog_title">LibraryThing password</string>
    <string name="preferences_ui_lt_password_hint">Enter password here</string>
    <string name="preferences_ui_lt_password_summary">Enter your LibraryThing password</string>
    <string name="preferences_ui_details">Details</string>
    <string name="preferences_ui_last_download_initial_summary">You have not yet downloaded your library from LibraryThing.</string>
    <string name="preferences_ui_last_download_title">Download history</string>
    <string name="preferences_ui_about">About</string>
    <string name="preferences_ui_no_affiliation">Not affiliated with www.librarything.com</string>
    <string name="preferences_ui_version_unknown">Unknown version</string>
    <string name="preferences_ui_attributions">Attributions</string>
    <string name="preferences_ui_jcsv">jCSV</string>
    <string name="preferences_ui_jcsv_licence">Apache Licence 2.0</string>
    <string name="preferences_ui_launcher">Launcher icon</string>
    <string name="preferences_ui_launcher_source">The Noun Project (http://www.thenounproject.com)</string>
    <string name="prefs_ui_case_sensitive_search_summary_off">Search queries are not case-sensitive</string>
    <string name="prefs_ui_case_sensitive_search_summary_on">Search queries are case-sensitive</string>
    <string name="prefs_ui_case_sensitive_search_title">Case sensitive search</string>
    <string name="menu_search">Search</string>
    <string name="menu_tags">Tags</string>
    <string name="menu_collections">Collections</string>
    <string name="menu_authors">Authors</string>
    <string name="menu_download">Download your library</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_delete">Delete library from device</string>
    <string name="menu_show_all_books">Show all books</string>
    <string name="title_activity_review_list">List of reviews</string>
    <string name="reviews_ui_title">List of reviews</string>
    <string name="menu_reviews">Reviews</string>
    <string name="menu_comments">Comments</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="topbar_allbooks">All books</string>
    <string name="topbar_search">Searched</string>
    <string name="topbar_tag">Tag</string>
    <string name="topbar_collection">Collection</string>
    <string name="topbar_author">Author</string>
    <string name="title_activity_comment_list">List of comments</string>
    <string name="comments_ui_title">List of comments</string>
    <string name="debug_log">None</string>
    <string name="title_activity_debug_log">View log</string>
    <string name="prefs_ui_debug_log_summary">View or send log to developer</string>
    <string name="title_activity_advanced_search">Advanced search</string>
    <string name="title_activity_select_items">Select...</string>
    <string-array name="sort_by_raw">
        <item>date_entered_r</item>
        <item>date_entered</item>
        <item>date_ended_r</item>
        <item>date_ended</item>
        <item>title</item>
        <item>author1</item>
        <item>author2</item>
        <item>date_started_r</item>
        <item>date_started</item>
        <item>DDC</item>
        <item>LCC</item>
    </string-array>
    <string-array name="sort_by_readable">
        <item>Date entered (recent first)</item>
        <item>Date entered (oldest first)</item>
        <item>Date finished (recent first)</item>
        <item>Date finished (oldest first)</item>
        <item>Title</item>
        <item>Author (last name)</item>
        <item>Author (first name)</item>
        <item>Date started (recent first)</item>
        <item>Date started (oldest first)</item>
        <item>Dewey Decimal</item>
        <item>Library of Congress</item>
    </string-array>
    

</resources>