<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_ui_title" />
    
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_ui_lt_username_hint"
		android:id="@+id/login_lt_username"
		/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_ui_lt_password_hint"
		android:id="@+id/login_lt_password"
		android:inputType="textPassword"
		/>

    <CheckBox
        android:id="@+id/login_lt_remember_credentials"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_ui_remember_credentials" />
    
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_ui_download_button"
        android:onClick="downloadLibrary"
        />
    

</LinearLayout>