<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/book_detail_main_layout"
    android:descendantFocusability="beforeDescendants"
	android:focusableInTouchMode="true"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

   <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >


        <TextView
            android:id="@+id/book_detail_title"
            style="?android:attr/textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/details_ui_title_dummy"
            android:textStyle="italic" />
        <TextView
            android:id="@+id/book_detail_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/details_ui_authors_dummy"
            android:textColor="#ffffff"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/book_detail_publication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/details_ui_publication_preface"
            android:textColor="#ffffff"
            android:textSize="15sp" />

        <LinearLayout
            android:id="@+id/book_detail_collections_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/book_detail_tags_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>

        <TextView
            android:id="@+id/book_detail_DDC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="6dp"
            android:textColor="#dddddd"
            android:text="DDC: " />
        
        <TextView
            android:id="@+id/book_detail_LCC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="6dp"
            android:textColor="#dddddd"
            android:text="LCC: " />
        
        <TextView
            android:id="@+id/book_detail_date_entered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="6dp"
            android:textColor="#dddddd"
            android:text="@string/details_ui_date_entered_preface" />
        
        <TextView
            android:id="@+id/book_detail_date_acquired"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="6dp"
            android:textColor="#dddddd"
            android:text="@string/details_ui_date_acquired_preface" />
        
        <TextView
            android:id="@+id/book_detail_date_started"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="6dp"
            android:textColor="#dddddd"
            android:text="@string/details_ui_date_started_preface" />
        
        <TextView
            android:id="@+id/book_detail_date_ended"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="6dp"
            android:textColor="#dddddd"
            android:text="@string/details_ui_date_ended_preface" />
        
        <RatingBar
            android:id="@+id/book_detail_rating_bar"
            style="?android:attr/ratingBarStyleIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5" />

        <TextView
            android:id="@+id/book_detail_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:textColor="#dddddd"
            android:text="@string/details_ui_review_preface" />
        
        <TextView
            android:id="@+id/book_detail_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:textColor="#dddddd"
            android:text="@string/details_ui_comments_preface" />
        
        <TextView
            android:id="@+id/book_detail_comments_private"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:textColor="#dddddd"
            android:text="@string/details_ui_private_comments_preface"
            android:textSize="15sp"
             />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
            android:id="@+id/book_detail_notes_header"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="6dp"
            android:textColor="#fff"
            android:text="Your notes:"
            android:textSize="16sp"
             />
            <Button
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Save note"
                android:onClick="saveNote"
                />
            
        </LinearLayout>
        
        
        <EditText
            android:id="@+id/book_detail_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="1"
            android:maxLines="20"
            android:textSize="16sp"
            android:hint="Add notes here"
            />
        
        
        
    </LinearLayout>

</ScrollView>